# routes/consumer-user.js
@@ -1,13 +1,15 @@
 const router = require('express').Router();
 const controller = require('../controllers/consumer-user');
 
+// Advanced CRUD
+router.post('/search', controller.searchConsumerUser); // Search
+
 // Basic CRUD
 router.post('/', controller.createConsumerUser);
-router.get('/', controller.getConsumerUser);
-router.put('/', controller.updateConsumerUser);
-router.delete('/', controller.deleteConsumerUser);
+router.get('/:id', controller.getConsumerUser);
+router.put('/:id', controller.updateConsumerUser);
+router.delete('/:id', controller.deleteConsumerUser);
 
-// Advanced CRUD
-router.get('/search', controller.searchConsumerUser); // Search
+
 
 module.exports = router;
